--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@codixjs/codix": "^1.0.0",
     "@codixjs/fetch": "^1.0.0",
     "@codixjs/server": "^1.0.0",
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "serve-static": "^1.15.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
@@ -45,7 +48,5 @@
       "/index.html": "/"
     }
   },
-  "manifest": {
-
-  }
+  "manifest": {}
 }
